--- a/index.html
+++ b/index.html
@@ -116,24 +116,24 @@
             <div class="work">
                 <img src="image/work-1.png">
                 <div class="layer">
-                    <h3>Website Sistem Informasi BEM FMIPA UM</h3>
-                    <p>The Sistem Informasi BEM FMIPA UM website is the final project of the Database course. The front-end was developed using HTML, CSS, and JavaScript.</p>
+                    <h3>Team. Website</h3>
+                    <p>The Team. website is is a test project for a front-end developer of CTARSA Foundation at detikcom which is done using HTML, CSS, JavaScript, and Bootsrap.</p>
                     <a href="work-1.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
                 <img src="image/work-2.png">
                 <div class="layer">
-                    <h3>Social Media App</h3>
-                    <p>The app connects you to the talented people around the world. Download it from play store.</p>
-                    <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                    <h3>Detikhealth Sudirman Run 2023 Website</h3>
+                    <p>The Detikhealth Sudirman Run 2023 website is is a test project for a front-end developer position at detikcom which is done using HTML, CSS, JavaScript, and Bootsrap.</p>
+                    <a href="work-2.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
             <div class="work">
                 <img src="image/work-3.png">
                 <div class="layer">
-                    <h3>Designing @gimmari_indonesia's Feeds</h3>
-                    <p>The Instagram feed design consists of 3 sections, the coming soon section, the intoduction section, and the pre-order section</p>
+                    <h3>Sistem Informasi BEM FMIPA UM Website</h3>
+                    <p>The Sistem Informasi BEM FMIPA UM website is the final project of the Database course. The front-end was developed using HTML, CSS, and JavaScript.</p>
                     <a href="work-3.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                 </div>
             </div>
