--- a/work-1.html
+++ b/work-1.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>
-            SISFOR BEMFA MIPA Project
+            Project Team. Website
         </title>
         <link rel="stylesheet" href="style.css">
         <script src="https://kit.fontawesome.com/2acd498ca4.js" crossorigin="anonymous"></script>
@@ -16,11 +16,11 @@
             <nav>
                 <img src="image/Elen.png" class="logo">
                 <ul id="sidemenu">
-                    <li><a href="#header">Home</a></li>
-                    <li><a href="#about">About</a></li>
-                    <li><a href="#services">Services</a></li>
-                    <li><a href="#portofolio">Portofolio</a></li>
-                    <li><a href="#contact">Contact</a></li>
+                    <li><a href="https://elenanggrian.me/#header">Home</a></li>
+                    <li><a href="https://elenanggrian.me/#about">About</a></li>
+                    <li><a href="https://elenanggrian.me/#services">Services</a></li>
+                    <li><a href="https://elenanggrian.me/#portofolio">Portofolio</a></li>
+                    <li><a href="https://elenanggrian.me/#contact">Contact</a></li>
                     <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
                 </ul>
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
@@ -31,7 +31,7 @@
         <div class="container">
             <div class="Tittleproject-text">
                 <p>Front-End Developer</p>
-                <h1>Website Sistem Informasi BEM FMIPA UM</h1>
+                <h1>Team. Website</h1>
             </div>
         </div> 
     </div>
@@ -41,16 +41,16 @@
                 <div class="row">
                     <div class="desc-col-1">
                         <h2>Project information</h2>
-                        <p>This project is part of the final project of the Database course which requires students to make a basic website/application that focusing on the "database system". The students are required to present at least 3 tables from the database into the developed website.</p>
-                        <p>The website Sistem Informasi BEM FMIPA UM has 7 menus, namely Dashboard, Anggota, Bidang, Program Kerja, Kepanitiaan, Pengaturan, and Keluar. My contribution in this team project is to create UI/UX design and apply it to the front-end design using HTML, CSS, and JavaScript.</p>
+                        <p>The Team. website is is a test project for a front-end developer of CTARSA Foundation at detikcom which is done using HTML, CSS, JavaScript, and Bootsrap.</p>
+                        <p>This website consists of 1 landing page, 2 blog pages, and 1 page for blog templates. This project has also been done to responsive for desktop, tablet, mobile landscape, and mobile portrait.</p>
                     </div>
                     <div class="desc-col-2">
-                        <h2>Course</h2>
-                        <p>Database</p>
+                        <h2>Company</h2>
+                        <p>Detikcom</p>
                         <h2>Date</h2>
-                        <p>Nov, 27th 2023</p>
+                        <p>Dec, 28th 2023</p>
                         <h2>Link Project</h2>
-                        <a href="bem/index.html">Website Sistem Informasi BEM FMIPA UM</a>
+                        <a href="Elen_Anggrian_Natasya_fe/Landing_Page.html">Team. Website</a>
                     </div>
                 </div>
             </div>
@@ -71,24 +71,24 @@
                 <div class="work">
                     <img src="image/work-1.png">
                     <div class="layer">
-                        <h3>Website Sistem Informasi BEM FMIPA UM</h3>
-                        <p>The Sistem Informasi BEM FMIPA UM website is the final project of the Database course. The front-end was developed using HTML, CSS, and JavaScript.</p>
+                        <h3>Team. Website</h3>
+                        <p>The Team. website is is a test project for a front-end developer of CTARSA Foundation at detikcom which is done using HTML, CSS, JavaScript, and Bootsrap.</p>
                         <a href="work-1.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
                     <img src="image/work-2.png">
                     <div class="layer">
-                        <h3>Social Media App</h3>
-                        <p>The app connects you to the talented people around the world. Download it from play store.</p>
-                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <h3>Detikhealth Sudirman Run 2023 Website</h3>
+                        <p>The Detikhealth Sudirman Run 2023 website is is a test project for a front-end developer position at detikcom which is done using HTML, CSS, JavaScript, and Bootsrap.</p>
+                        <a href="work-2.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
                     <img src="image/work-3.png">
                     <div class="layer">
-                        <h3>Designing @gimmari_indonesia's Feeds</h3>
-                        <p>The Instagram feed design consists of 3 sections, the coming soon section, the intoduction section, and the pre-order section</p>
+                        <h3>Sistem Informasi BEM FMIPA UM Website</h3>
+                        <p>The Sistem Informasi BEM FMIPA UM website is the final project of the Database course. The front-end was developed using HTML, CSS, and JavaScript.</p>
                         <a href="work-3.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
