--- a/work-4.html
+++ b/work-4.html
@@ -5,7 +5,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE-edge">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>
-            SISFOR BEMFA MIPA Project
+            Gimindo Project
         </title>
         <link rel="stylesheet" href="style.css">
         <script src="https://kit.fontawesome.com/2acd498ca4.js" crossorigin="anonymous"></script>
@@ -16,11 +16,11 @@
             <nav>
                 <img src="image/Elen.png" class="logo">
                 <ul id="sidemenu">
-                    <li><a href="https://elenanggrian.me/#header">Home</a></li>
-                    <li><a href="https://elenanggrian.me/#about">About</a></li>
-                    <li><a href="https://elenanggrian.me/#services">Services</a></li>
-                    <li><a href="https://elenanggrian.me/#portofolio">Portofolio</a></li>
-                    <li><a href="https://elenanggrian.me/#contact">Contact</a></li>
+                    <li><a href="#header">Home</a></li>
+                    <li><a href="#about">About</a></li>
+                    <li><a href="#services">Services</a></li>
+                    <li><a href="#portofolio">Portofolio</a></li>
+                    <li><a href="#contact">Contact</a></li>
                     <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
                 </ul>
                 <i class="fa-solid fa-bars" onclick="openmenu()"></i>
@@ -30,8 +30,8 @@
     <div id="header-desc">
         <div class="container">
             <div class="Tittleproject-text">
-                <p>Front-End Developer</p>
-                <h1>Website Sistem Informasi BEM FMIPA UM</h1>
+                <p>Graphic Designer</p>
+                <h1>@gimmari_indonesia's Feeds</h1>
             </div>
         </div> 
     </div>
@@ -41,16 +41,16 @@
                 <div class="row">
                     <div class="desc-col-1">
                         <h2>Project information</h2>
-                        <p>This project is part of the final project of the Database course which requires students to make a basic website/application that focusing on the "database system". The students are required to present at least 3 tables from the database into the developed website.</p>
-                        <p>The website Sistem Informasi BEM FMIPA UM has 7 menus, namely Dashboard, Anggota, Bidang, Program Kerja, Kepanitiaan, Pengaturan, and Keluar. My contribution in this team project is to create UI/UX design and apply it to the front-end design using HTML, CSS, and JavaScript.</p>
+                        <p>This project is part of the final project of the Kewirausahaan course which requires students to open a small business. Not only that, students are also required to design a marketing strategy. One of the marketing strategies implemented is marketing through social media.</p>
+                        <p>The Instagram feed design consists of 3 sections. The first section is the announcement section where Gimindo products will be launched soon. The second part is the first launch of gimindo products. The third part is the announcement of the opening of Gimindo pre-order.</p>
                     </div>
                     <div class="desc-col-2">
                         <h2>Course</h2>
-                        <p>Database</p>
+                        <p>Kewirausahaan</p>
                         <h2>Date</h2>
-                        <p>Nov, 27th 2023</p>
+                        <p>Dec, 2nd 2023</p>
                         <h2>Link Project</h2>
-                        <a href="bem/index.html">Website Sistem Informasi BEM FMIPA UM</a>
+                        <a href="https://www.instagram.com/gimmari_indonesia/?utm_source=ig_web_button_share_sheet&igshid=MmVlMjlkMTBhMg==">@gimmari_indonesia</a>
                     </div>
                 </div>
             </div>
@@ -58,9 +58,9 @@
     <!-- project's image -->
     <div id="img-project">
         <div class="container">
-            <img src="image/work-1-1.png">
-            <img src="image/work-1-2.png">
-            <img src="image/work-1-3.png">
+            <img src="image/work-4-1.gif">
+            <img src="image/work-4-2.gif">
+            <img src="image/work-4-3.gif">
         </div>
     </div>
     <!-- Project -->
@@ -81,7 +81,7 @@
                     <div class="layer">
                         <h3>Detikhealth Sudirman Run 2023 Website</h3>
                         <p>The Detikhealth Sudirman Run 2023 website is is a test project for a front-end developer position at detikcom which is done using HTML, CSS, JavaScript, and Bootsrap.</p>
-                        <a href="work-2.html"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
+                        <a href="#"><i class="fa-solid fa-arrow-up-right-from-square"></i></a>
                     </div>
                 </div>
                 <div class="work">
