add script for switch button

--- a/CaseStudy_RarityNinja/index.html
+++ b/CaseStudy_RarityNinja/index.html
@@ -30,15 +30,15 @@
                 </div>
 
                 <div class="navigation__toggle">
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512" class="toggle__menu">
-                        <path d="M0 96C0 78.3 14.3 64 32 64H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32C14.3 128 0 113.7 0 96zM0 256c0-17.7 14.3-32 32-32H416c17.7 0 32 14.3 32 32s-14.3 32-32 32H32c-17.7 0-32-14.3-32-32zM448 416c0 17.7-14.3 32-32 32H32c-17.7 0-32-14.3-32-32s14.3-32 32-32H416c17.7 0 32 14.3 32 32z"/>
-                    </svg>
-                    <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 384 512" class="toggle__close">
-                        <path d="M376.6 84.5c11.3-13.6 9.5-33.8-4.1-45.1s-33.8-9.5-45.1 4.1L192 206 56.6 43.5C45.3 29.9 25.1 28.1 11.5 39.4S-3.9 70.9 7.4 84.5L150.3 256 7.4 427.5c-11.3 13.6-9.5 33.8 4.1 45.1s33.8 9.5 45.1-4.1L192 306 327.4 468.5c11.3 13.6 31.5 15.4 45.1 4.1s15.4-31.5 4.1-45.1L233.7 256 376.6 84.5z"/>
+                    <svg class="toggle__menu" id="fa-solid-open" onclick="openmenu()">
+                        <use xlink:href="img/symbol-defs.svg#icon-bars-solid"></use>
                     </svg>
                 </div>
 
-                <div class="navigation__list">
+                <div class="navigation__list" id="sidemenu">
+                    <svg class="toggle__close" id="fa-solid-close" onclick="closemenu()" >
+                        <use xlink:href="img/symbol-defs.svg#icon-x-solid"></use>
+                    </svg>
                     <button href="#" class="btn btn-text">
                         Login
                     </button>
@@ -82,7 +82,7 @@
         </header>
 
         <main>
-            <section class="section-about padding-all">
+            <section class="section-about animate-once padding-all">
                 <div class="about__img">
                     <img src="img/About-Img.png" alt="About Us Image" class="about__img--1">
                 </div>
@@ -112,10 +112,10 @@
                     </p>
                 </div>
                 <div class="pricing__switch">
-                    <button href="#" class="btn btn-switch">
+                    <button href="#" id="monthlybtn" class="btn btn-switch" onclick="switchFrequency('monthly')">
                         Monthly
                     </button>
-                    <button href="#" class="btn btn-switch btn btn-switch--active">
+                    <button href="#" id="anuallybtn" class="btn btn-switch btn-switch--active"onclick="switchFrequency('anually')">
                         Anually
                     </button>
                 </div>
@@ -295,5 +295,8 @@
                 </div>
             </div>
         </footer>
+
+        <script src="script.js"></script>
+
     </body>
 </html>
