animation for all section

--- a/CaseStudy_RarityNinja/index.html
+++ b/CaseStudy_RarityNinja/index.html
@@ -82,7 +82,7 @@
         </header>
 
         <main>
-            <section class="section-about animate-once padding-all">
+            <section class="section-about padding-all">
                 <div class="about__img">
                     <img src="img/About-Img.png" alt="About Us Image" class="about__img--1">
                 </div>
@@ -105,13 +105,13 @@
             </section>
 
             <section class="section-pricing">
-                <div class="pricing__heading u-margin-bottom-big">
+                <div class="pricing__heading u-margin-bottom-big down1">
                     <h2 class="heading-2 center-text">Choose your plan</h2>
                     <p class="paragraph center-text">
                         Everything you need to get RarityNinja analytics.
                     </p>
                 </div>
-                <div class="pricing__switch">
+                <div class="pricing__switch down2">
                     <button href="#" id="monthlybtn" class="btn btn-switch" onclick="switchFrequency('monthly')">
                         Monthly
                     </button>
@@ -119,7 +119,7 @@
                         Anually
                     </button>
                 </div>
-                <div class="pricing__card">
+                <div class="pricing__card down3">
                     <div class="card card--light">
                         <div class="card__price">$0<span>/month</span></div>
                         <div class="card__icon u-margin-bottom-small">
@@ -238,22 +238,22 @@
                 </div>
             </section>
 
-            <div class="extension-section padding-all">
-                <h4 class="heading-4 u-margin-bottom-smallest">
+            <section class="section-extension padding-all">
+                <h4 class="heading-4 u-margin-bottom-smallest down1">
                     extension
                 </h4>
-                <h2 class="heading-2 center-text u-margin-bottom-small">
+                <h2 class="heading-2 center-text u-margin-bottom-small down1">
                     Get started now, it’s free!
                 </h2>
-                <p class="paragraph center-text u-margin-bottom-big">
+                <p class="paragraph center-text u-margin-bottom-big down2">
                     Download RarityNinja’s chrome extension
                 </p>
-                <button href="#" class="btn btn-primer">
+                <button href="#" class="btn btn-primer down2">
                     <svg class="download__icon">
                         <use xlink:href="img/symbol-defs.svg#icon-Icon-Download-Extension"></use>
                     </svg>Download Extension
                 </button>
-            </div>
+            </section>
         </main>
 
         <footer class="footers">
