--- a/CaseStudy_RarityNinja/index.html
+++ b/CaseStudy_RarityNinja/index.html
@@ -50,9 +50,9 @@
                       </li>
                       
                       <li class="nav-item d-md-none">
-                        <button href="#" class="btn btn-text">
+                        <a href="#section-pricing" class="btn btn-text">
                             Get Started
-                        </button>
+                        </a>
                       </li>  
                     </ul>
                   </div>
@@ -63,7 +63,7 @@
         <!-- Hero Section -->
             <section class="hero">
                 <div class="container-xxl d-flex flex-md-row flex-column justify-content-between align-items-center" id="hero">
-                    <div class="hero__content">
+                    <div class="hero__content d-flex flex-column align-items-md-start align-items-center text-md-start text-center">
                         <h1 class="heading-1 u-margin-bottom-medium">
                             Get the latest<br>NFT rarity rankings collection
                         </h1>
